# netevd

./: .commitlintrc.json  .dockerignore  .gitignore  CHANGELOG.md  CONFIGURATION.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.alpine  Dockerfile.debian  FEATURES_IMPLEMENTED.md  FEATURES_PRIORITY.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS.md  INSTALL.md  QUICK_WINS.md  README.md  ROADMAP.md  SECURITY.md  TESTING.md  deny.toml  docker-compose.yml  linkedin-post-enhanced.md  linkedin-post-medium.md  linkedin-post-short.md  linkedin-post.md
.github/: README.md  dependabot.yml  labeler.yml
.github/workflows/: benchmark.yml  ci.yml  coverage.yml  cross-platform.yml  docker.yml  docs.yml  functional-tests.yml  pr-automation.yml  release.yml  rust.yml  security.yml  stale.yml
distribution/: netevd.service  netevd.yaml
docs/: API.md  ARCHITECTURE.md  EXAMPLES.md  METRICS.md  QUICKSTART.md  README.md  TROUBLESHOOTING.md
examples/: README.md  netevd.yaml
kubernetes/: configmap.yaml  deployment.yaml  rbac.yaml  service.yaml  servicemonitor.yaml
kubernetes/operator/: crd.yaml
packaging/: .SRCINFO  PKGBUILD  QUICKSTART.md  README.md  netevd.spec
packaging/debian/: changelog  control  copyright  install  postinst  prerm  rules
src/: lib.rs  main.rs
src/api/: handlers.rs  mod.rs  models.rs  routes.rs  server.rs
src/audit/: mod.rs
src/bus/: hostnamed.rs  mod.rs  resolved.rs
src/cli/: handler.rs  mod.rs
src/cloud/: aws.rs  azure.rs  gcp.rs  mod.rs
src/config/: mod.rs
src/filters/: mod.rs
src/listeners/: mod.rs
src/listeners/dhclient/: mod.rs  parser.rs
src/listeners/networkd/: api.rs  dbus.rs  json.rs  mod.rs
src/listeners/networkmanager/: dbus.rs  dbus.rs.orig  mod.rs
src/metrics/: mod.rs
src/network/: address.rs  ipv6.rs  link.rs  mod.rs  route.rs  routing_rule.rs  watcher.rs
src/system/: capability.rs  execute.rs  mod.rs  paths.rs  user.rs  validation.rs
src/web/: dashboard.html
systemd/: README.md  SECURITY.md  netevd.service
tests/: functional_test.rs  integration_test.rs
