[package]
name = "netevd"
version = "0.1.0"
edition = "2021"
authors = ["Susant Sahani <ssahani@redhat.com>"]
license = "LGPL-3.0-or-later"
description = "High-performance network event daemon for systemd-networkd, NetworkManager, and dhclient with routing policy rules and script execution"
repository = "https://github.com/ssahani/netevd"
homepage = "https://github.com/ssahani/netevd"
documentation = "https://github.com/ssahani/netevd/blob/main/README.md"
readme = "README.md"
keywords = ["networking", "systemd", "dhclient", "netlink", "dbus"]
categories = ["network-programming", "os::linux-apis"]
exclude = [
    "packaging/*",
    ".github/*",
    "tests/*",
    "examples/*.sh",
]

[[bin]]
name = "netevd"
path = "src/main.rs"

[lib]
name = "netevd"
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"

# Netlink operations
rtnetlink = "0.14"
netlink-packet-route = "0.19"
netlink-packet-core = "0.7"
netlink-sys = "0.8"
netlink-proto = "0.11"

# DBus
zbus = { version = "4.0", features = ["tokio"] }

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# File watching
notify = { version = "6.1", features = ["serde"] }

# System/Security
caps = "0.5"
nix = { version = "0.29", features = ["user", "process"] }
libc = "0.2"

# Parsing
ini = "1.3"
configparser = "3.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Network types
ipnetwork = "0.20"

[dev-dependencies]
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
