[package]
name = "netevd"
version = "0.2.0"
edition = "2021"
authors = ["Susant Sahani <ssahani@redhat.com>"]
license = "LGPL-3.0-or-later"
description = "High-performance network event daemon for systemd-networkd, NetworkManager, and dhclient with routing policy rules and script execution"
repository = "https://github.com/ssahani/netevd"
homepage = "https://github.com/ssahani/netevd"
documentation = "https://github.com/ssahani/netevd/blob/main/README.md"
readme = "README.md"
keywords = ["networking", "systemd", "dhclient", "netlink", "dbus"]
categories = ["network-programming", "os::linux-apis"]
exclude = [
    "packaging/*",
    ".github/*",
    "tests/*",
    "examples/*.sh",
]

[[bin]]
name = "netevd"
path = "src/main.rs"

[lib]
name = "netevd"
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"

# Netlink operations
rtnetlink = "0.14"
netlink-packet-route = "0.19"  # Match rtnetlink version
netlink-packet-core = "0.8"
netlink-sys = "0.8"
netlink-proto = "0.12"

# DBus
zbus = { version = "5.13", features = ["tokio"] }

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# CLI
clap = { version = "4.5", features = ["derive", "cargo", "env"] }

# HTTP/API Server
axum = { version = "0.8", features = ["ws", "macros"] }
tower = { version = "0.5", features = ["util", "timeout", "limit"] }
tower-http = { version = "0.6", features = ["fs", "trace", "cors"] }
hyper = { version = "1.0", features = ["full"] }

# Metrics
prometheus = { version = "0.13", features = ["process"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
regex = "1.10"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# File watching
notify = { version = "6.1", features = ["serde"] }

# System/Security
caps = "0.5"
nix = { version = "0.31", features = ["user", "process", "signal"] }
libc = "0.2"

# Parsing
ini = "1.3"
configparser = "3.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Network types
ipnetwork = "0.20"

# Optional features
signal-hook = "0.3"
signal-hook-tokio = { version = "0.4", features = ["futures-v0_3"] }

[dev-dependencies]
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
